# constrained-categories

./: .emacs.desktop  .gitignore  .travis.yml  README.md  compound-categories.cabal  constrained-categories.cabal
Control/Applicative/: Compound.hs  Constrained.hs
Control/Arrow/: Compound.hs  Constrained.hs
Control/Arrow/Compound/: Class.hs
Control/Arrow/Constrained/: Class.hs
Control/Category/: Compound.hs  Constrained.hs  Discrete.hs  Hask.hs
Control/Category/Compound/: Prelude.hs  Reified.hs
Control/Category/Compound/Reified/: PolyPattern.hs
Control/Category/Constrained/: Prelude.hs  Reified.hs
Control/Category/Constrained/Reified/: PolyPattern.hs
Control/Functor/: Compound.hs  Constrained.hs
Control/Monad/: Compound.hs  Constrained.hs
Data/CategoryObject/: Product.hs
Data/Foldable/: Compound.hs  Constrained.hs
Data/Traversable/: Compound.hs  Constrained.hs
Data/Tuple/: Constraint.hs
examples/: Hask.hs  Invertible.hs  Makefile  Set.hs  VectK.hs
wild-ideas/: TupMat.hs
