Name:                compound-categories
Version:             0.0.0.0
Category:            control
Synopsis:            Cartesian (WRT compound-types) -closed categories
Description:         A port of the <http://hackage.haskell.org/package/constrained-categories constrained-categories library>
                     that uses @*@ and @+@ <http://hackage.haskell.org/package/compound-types compound-types>
                     as its product / coproducts.
License:             GPL-3
License-file:        COPYING
Author:              Justus Sagemüller
Maintainer:          (@) sagemueller $ geo.uni-koeln.de
Homepage:            https://github.com/leftaroundabout/constrained-categories
Build-Type:          Simple
Cabal-Version:       >=1.10
Tested-With:         GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.2
                                

source-repository head
  type: git
  location: git://github.com/leftaroundabout/constrained-categories.git

Library
  Default-Language:   Haskell2010
  Build-Depends:      base>=4.7 && <5
                      , tagged
                      , void
                      , compound-types
  Default-Extensions: ConstraintKinds
                      TypeFamilies
                      FlexibleInstances
                      UndecidableInstances
                      Trustworthy
  Exposed-modules:    Control.Category.Compound
                      Control.Functor.Compound
                      Control.Applicative.Compound
                      Control.Arrow.Compound
                      Control.Monad.Compound
                      Control.Category.Hask
                      Control.Category.Compound.Prelude
                      Control.Category.Compound.Reified
                      Control.Category.Compound.Reified.PolyPattern
                      Data.Foldable.Compound
                      Data.Traversable.Compound
                     
